add more lyrics and assets

--- a/src/content/blog/1998-home.md
+++ b/src/content/blog/1998-home.md
@@ -5,7 +5,7 @@ description: "Lyrics for National Day Parade 1998 Theme song: Home"
 pubDate: 1998-08-09
 category: "lyrics"
 author: "Kit Chan and Dick Lee"
-customData: "https://jadedew.netlify.app/lyrics/1998.jpg"
+customData: "https://jadedew.netlify.app/lyrics/1998.webp"
 youtube_id: "JOc1RGkBviQ"
 ---
 
